# grpc-tutorial

./: Cargo.toml  docker-compose.yaml
containers/api/: Dockerfile  develop  local  prod
containers/nginx/: Dockerfile  nginx.conf
data/: route_guide_db.json
grpc_client/: Cargo.toml
grpc_server/: Cargo.toml  build.rs
grpc_server/proto/: route_guide.proto
grpc_server/src/: data.rs  lib.rs  route_guide_rpc.rs
proto/: diary.proto  route_guide.proto
src/: data.rs
