[package]
name = "grpc_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
async-stream = "0.3.3"
futures-util = "0.3.21"
grpc_server = { path = "../grpc_server" }
rand = "0.8.5"
serde_json = "1.0.81"
tokio = "1.18.2"
tonic = "0.7.2"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

